Actualicé la el tamaño de letra de mi apellido

--- a/pages/pagePerfil.html
+++ b/pages/pagePerfil.html
@@ -28,7 +28,7 @@
           <div class="card-body bg-black bg-gradient ">
             <div class="text-center">
               <h1 class="card-title  " style="color: red;">JOSE CARLOS</h1>
-              <p class="h1 "style="color: white;">MENDIETA ARNEZ</p>
+              <p class="h2 "style="color: white;">MENDIETA ARNEZ</p>
             </div>
             <hr>
 
@@ -117,14 +117,14 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col" class="medio">
             <div class="card h-100 border border-0">
               <img src="../img/netflix.jpg" class="card-img-top img-2" alt="...">
               <div class="card-body bg-dark bg-gradient">
                 <h2 class="card-title text-center" style="color: red;">Portada principal de Netflix</h2>
                 <p class="card-text text-center " style="color: white;">Esta página web fué desarrollanda, aplicando conocimientos y estilos
                   básicos de CSS y etiquetas HTML.
-                  Contiene además estilos que originan el bifuminado caracterpistico de Netflix.
+                  Contiene además estilos que originan el bifuminado caracteristico de Netflix.
                 </p>
                 <div class="text-center ">
                   <a target="_blank" href="https://github.com/josemenargib/cloneNetflix"
